--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rosie_controller",
   "version": "0.0.1",
   "description": "Home automation controller.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
