Add ir transmitter url and update usb address of zwave controller

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
-  "remotes": {
-    "receiver": {"title": "Receiver"},
-    "tv": {"title": "TV"},
-    "ps3": {"title": "PS3"}
-  },
+  "IR_TRANSMITTER_URL": "http://192.168.8.12/send.htm",
+  "REMOTE_LIST": [
+    {"key": "receiver", "title": "Receiver", "remote_key": "denon avr-988"},
+    {"key": "tv", "title": "TV", "remote_key": "samsung ln46a750"},
+    {"key": "ps3", "title": "PS3", "remote_key": "ps3"}
+  ],
   "zwave": {
     "config": {
       "logging": false,
@@ -13,6 +14,6 @@
       "pollinterval": 500,
       "suppressrefresh": true
     },
-    "usb_address": "/dev/ttyUSB0"
+    "USB_ADDRESS": "/dev/aeon_z_stick"
   }
 }
