Added dependencies for making http requests

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "author": "Scott Olson",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.9.30",
     "good": "^5.1.2",
     "good-console": "^4.1.0",
     "hapi": "^8.2.0",
+    "joi": "^6.5.0",
     "openzwave": "0.0.32",
     "q": "^1.2.0",
+    "request": "^2.58.0",
     "underscore": "^1.8.3",
+    "url": "^0.10.3",
     "util": "^0.10.3"
   }
 }
