Multiple modules to shutdown

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "Scott Olson",
   "license": "MIT",
   "dependencies": {
-    "bluebird": "^2.9.30",
+    "async": "^1.3.0",
+    "bluebird": "^2.9.32",
     "good": "^5.1.2",
     "good-console": "^4.1.0",
     "hapi": "^8.2.0",
     "joi": "^6.5.0",
+    "kue": "^0.9.3",
     "openzwave": "0.0.32",
     "q": "^1.2.0",
     "request": "^2.58.0",
